Fix wrapping text on multipleTextinput.

--- a/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
+++ b/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
@@ -202,6 +202,12 @@ pre {
 	float: none;
 }
 
+.wrap {
+	word-break: break-all;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
+}
+
 .searchValue {
 	margin-left: 10px;
 }
